--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wander T. Guimarães - Síndico Profissional</title>
+    <title>CondoServices Gestão - Síndico Profissional</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Wander T. Guimarães - Síndico Profissional</h1>
+	<section id="sobre">
+    <h2>Quem Sou Eu</h2>
+    <img src="meu_perfil.jpg" alt="condoservicesgestao">
+    <p>CondoServices Gestão, síndico profissional com mais de 11 anos de experiência...</p>
+</section>
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+        <h1>condoservicesgestao - Síndico Profissional</h1>
         <nav>
             <ul>
                 <li><a href="#home">Início</a></li>
@@ -21,25 +31,25 @@
             <!-- Local para inserir contatos -->
             <p>Telefone: (31) 973106723</p>
             <p>Email: gestor@condoservicesgestao.com</p>
-            <p>Redes Sociais: [Links]</p>
         </div>
     </header>
 
     <main>
         <section id="home">
             <h2>Bem-vindo ao seu Síndico Profissional!</h2>
-            <p>Bem-vindo ao site de Wander T. Guimarães, seu síndico profissional de confiança...</p>
+            <p>Bem-vindo ao site de Condo Services Gestão, seu síndico profissional de confiança...</p>
         </section>
 
         <section id="sobre">
             <h2>Quem Sou Eu</h2>
-            <p>Meu nome é Wander T. Guimarães, sou síndico profissional com [número] anos de experiência...</p>
+            <p>Condo Services Gestão, síndico profissional com mais de 11 anos de experiência...</p>
         </section>
 
         <section id="servicos">
             <h2>Serviços Oferecidos</h2>
             <ul>
                 <li>Administração Financeira</li>
+				li>Gestão por indicadores</li>
                 <li>Gestão de Conflitos</li>
                 <li>Manutenção Predial</li>
                 <li>Organização de Assembleias</li>
