--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wander T. Guimarães - Síndico Profissional</title>
+    <title>Contato - Wander T. Guimarães</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,11 +20,10 @@
     </header>
 
     <main>
-        <section id="home">
-            <div class="hero-image">
-                <h2>Bem-vindo ao seu Síndico Profissional!</h2>
-                <p>Seu parceiro ideal para a gestão condominial com mais de 11 anos de experiência.</p>
-            </div>
+        <section id="contato">
+            <h2>Informações de Contato</h2>
+            <p>Telefone: 31 97310-6723</p>
+            <p>Email: <a href="mailto:gestor@condosericesgestao.com">gestor@condosericesgestao.com</a></p>
         </section>
     </main>
 
