--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wander T. Guimarães - Síndico Profissional</title>
+    <title>Condo Services Gestão - Síndico Profissional</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Wander T. Guimarães - Síndico Profissional</h1>
+        <h1>Condo Services Gestão - Síndico Profissional</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
@@ -24,12 +24,16 @@
             <div class="hero-image">
                 <h2>Bem-vindo ao seu Síndico Profissional!</h2>
                 <p>Seu parceiro ideal para a gestão condominial com mais de 11 anos de experiência.</p>
+                <img src="Condo.jpg" alt="Condo Image" class="main-image">
+                <div class="qr-code">
+                    <img src="qr-code.png" alt="QR Code para WhatsApp">
+                </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>© 2024 Wander T. Guimarães. Todos os direitos reservados.</p>
+        <p>© 2024 Condo Services Gestão. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
