--- a/contato.html
+++ b/contato.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - Wander T. Guimarães</title>
+    <title>Contato - Condo Services Gestão</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Wander T. Guimarães - Síndico Profissional</h1>
+        <h1>Condo Services Gestão - Síndico Profissional</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
@@ -28,7 +28,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Wander T. Guimarães. Todos os direitos reservados.</p>
+        <p>© 2024 Condo Services Gestão. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
