--- a/sobre.html
+++ b/sobre.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre - Wander T. Guimarães</title>
+    <title>Sobre - Condo Services Gestão</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Wander T. Guimarães - Síndico Profissional</h1>
+        <h1>Condo Services Gestão - Síndico Profissional</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
@@ -22,7 +22,7 @@
     <main>
         <section id="sobre">
             <h2>Sobre Mim</h2>
-            <p>Sou Wander T. Guimarães, um síndico profissional com mais de 11 anos de experiência no mercado condominial. Minha missão é garantir a gestão eficiente e harmoniosa dos condomínios, com foco na transparência e no bem-estar dos moradores.</p>
+            <p>Condo Services Gestão, especializado em serviço de síndico profissional com mais de 11 anos de experiência no mercado condominial. Minha missão é garantir a gestão eficiente e harmoniosa dos condomínios, com foco na transparência e no bem-estar dos moradores.</p>
             <h3>Serviços Oferecidos</h3>
             <ul>
                 <li>Administração Financeira</li>
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Wander T. Guimarães. Todos os direitos reservados.</p>
+        <p>© 2024 Condo Services Gestão. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
